<resources>
    <string name="app_name">Toast</string>
    <string name="toast_button">Toast</string>
    <string name="count_button">count</string>
    <string name="_1">1</string>
    <string name="c">c</string>
    <string name="x">x²</string>
    <string name="del">del</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mul">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="min">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="perc">%</string>
    <string name="equal">=</string>
</resources>