<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Toast_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:onClick="message"
        android:text="@string/toast_button"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Text_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#41000000"
        android:layout_gravity="end"
        android:text="0"
        android:textColor="@color/teal_700"
        android:textSize="40sp" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="4">

        <Button
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#DA0B0B"
            android:onClick="cancel"
            android:text="@string/c"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:onClick="del"
            android:text="@string/del"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:onClick="sq"
            android:text="@string/x"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:onClick="div"
            android:text="@string/div"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/no7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n7"
            android:text="@string/_7"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/no8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n8"
            android:text="@string/_8"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/no9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n9"
            android:text="@string/_9"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:onClick="multi"
            android:text="@string/mul"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/no4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n4"
            android:text="@string/_4"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/no5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n5"
            android:text="@string/_5"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/no6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n6"
            android:text="@string/_6"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:onClick="min"
            android:text="@string/min"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/no1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n1"
            android:text="@string/_1"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/no2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n2"
            android:text="@string/_2"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/no3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n3"
            android:text="@string/_3"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:onClick="add"
            android:text="@string/add"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="point"
            android:text="@string/point"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/no0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="n0"
            android:text="@string/_0"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="percentile"
            android:text="@string/perc"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:onClick="equals"
            android:text="@string/equal"
            android:textSize="24sp"
            android:textStyle="bold" />


    </GridLayout>







</LinearLayout>
